# simple-game

./: Cargo.toml  Readme.md  _Cargo.toml  build.sh  config.yaml  silly.py
runner/: Cargo.toml  build.sh
runner/src/: main.rs
server/: Cargo.toml
server/src/: cfg.rs  client.rs  main.rs
src/: cfg.rs  client.rs  main.rs  runner.rs
